# tIDE

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  exe  main.c  settings.h.orig
cmake/: VJ_FindNcurses.cmake  misc.cmake  ncurses.cmake  settings.cmake
include/: argparser.h  arguments_parser.h  errors.h
src/: CMakeLists.txt  init.h  main.c  main.cpp
src/core/: arguments_parser.c
